Kubernetes/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: myapp
  namespace: app
spec:
  type: NodePort
  ports:
  - port: 5000
    protocol: TCP
  selector:
    app: python
